# AbyssEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  doxide.yaml  doxyfile  imgui.ini  mkdocs.yaml  mkdocs.yml
Source/: main.cpp
Source/Fonts/: README.md
Source/Plugins/: Plug.cpp
Source/Private/Browser/: Browser.cpp
Source/Private/Core/: App.cpp  EntryPoint.cpp  Event.cpp  Log.cpp  Object.cpp  Plugin.cpp  Resource.cpp  Serialize.cpp  Thread.cpp  Time.cpp  Window.cpp
Source/Private/Editor/: Editor.cpp
Source/Private/Platform/: Platform.cpp  Process.cpp  SharedLibrary.cpp
Source/Private/Platform/imgui/: imconsole.cpp  imtheme.cpp  imwidget.cpp
Source/Private/Platform/posix/: PlatformPosix.cpp  ProcessPosix.cpp  WindowPosix.cpp
Source/Private/Platform/vk/: VkAllocator.cpp  VkBuffer.cpp  VkCmdBuff.cpp  VkCmdPool.cpp  VkCommon.cpp  VkContext.cpp  VkDebugger.cpp  VkDescriptorPool.cpp  VkDeviceManager.cpp  VkInstance.cpp  VkPipeline.cpp  VkRenderModule.cpp  VkRenderer.cpp  VkShader.cpp  VkShaderCompiler.cpp  VkShaderModule.cpp  VkShaderStructs.cpp  VkSurface.cpp  VkSwapchain.cpp  VkTexture.cpp
Source/Private/Platform/win32/: PlatformWin32.cpp  ProcessWin32.cpp  SharedLibraryWin32.cpp  WindowWin32.cpp
Source/Private/Rendering/: Camera.cpp  Canvas.cpp  Context.cpp  Dockspace.cpp  Font.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  Vertex.cpp  Viewport.cpp  Window.cpp
Source/Private/Rendering/UI/: Button.cpp  Canvas.cpp  Console.cpp  Dropdown.cpp  Image.cpp  InputTextbox.cpp  LayoutContainer.cpp  Panel.cpp  ParentWidget.cpp  Textbox.cpp  UICommon.cpp  Widget.cpp  WidgetSwitcher.cpp
Source/Private/Utility/: CursorString.cpp  File.cpp  Inserter.cpp  MaxEmptyRectFinder.cpp  Profiler.cpp  Random.cpp  Serialize.cpp  TagParser.cpp  Thread.cpp
Source/Private/Widget/: Button.cpp  Canvas.cpp  Console.cpp  Dropdown.cpp  Image.cpp  InputTextbox.cpp  LayoutContainer.cpp  Panel.cpp  Textbox.cpp  UICommon.cpp  Widget.cpp  WidgetSwitcher.cpp
Source/Private/vk/: VkAllocator.cpp  VkBuffer.cpp  VkCmdBuff.cpp  VkCmdPool.cpp  VkCommon.cpp  VkContext.cpp  VkDebugger.cpp  VkDescriptorPool.cpp  VkDeviceManager.cpp  VkInstance.cpp  VkPipeline.cpp  VkRenderModule.cpp  VkRenderer.cpp  VkShader.cpp  VkSurface.cpp  VkSwapchain.cpp  VkTexture.cpp
Source/Public/Browser/: Browser.h
Source/Public/Core/: App.h  Common.h  EntryPoint.h  Event.h  Log.h  Number.h  Object.h  Plugin.h  Resource.h  Serialize.h  Thread.h  Time.h  Window.h
Source/Public/Editor/: Editor.h
Source/Public/Platform/: Platform.h  Process.h  SharedLibrary.h
Source/Public/Platform/imgui/: imconfig.h  imconsole.h  imtheme.h  imwidget.h
Source/Public/Platform/posix/: PlatformPosix.h  ProcessPosix.h  WindowPosix.h
Source/Public/Platform/vk/: VkAllocator.h  VkBuffer.h  VkCmdBuff.h  VkCmdPool.h  VkCommon.h  VkContext.h  VkDebugger.h  VkDescriptorPool.h  VkDeviceManager.h  VkInstance.h  VkPipeline.h  VkRenderModule.h  VkRenderer.h  VkShader.h  VkShaderCompiler.h  VkShaderModule.h  VkShaderStructs.h  VkSurface.h  VkSwapchain.h  VkTexture.h
Source/Public/Platform/win32/: PlatformWin32.h  ProcessWin32.h  SharedLibraryWin32.h  WindowWin32.h
Source/Public/Rendering/: Camera.h  Context.h  Dockspace.h  Font.h  Renderer.h  Shader.h  Texture.h  Vertex.h  Viewport.h  Window.h
Source/Public/Rendering/UI/: Button.h  Canvas.h  Console.h  Dropdown.h  Image.h  InputTextbox.h  LayoutContainer.h  Panel.h  ParentWidget.h  Textbox.h  UI.h  UICommon.h  Widget.h  WidgetSwitcher.h
Source/Public/Utility/: CursorString.h  Delegate.h  File.h  Inserter.h  MaxEmptyRectFinder.h  Profiler.h  Random.h  Serialize.h  TagParser.h  Thread.h
Source/Public/Widget/: Button.h  Canvas.h  Console.h  Dropdown.h  Image.h  InputTextbox.h  LayoutContainer.h  Panel.h  Textbox.h  UI.h  Viewport.h  Widget.h  WidgetSwitcher.h
Source/Public/vk/: VkAllocator.h  VkBuffer.h  VkCmdBuff.h  VkCmdPool.h  VkCommon.h  VkContext.h  VkDebugger.h  VkDescriptorPool.h  VkDeviceManager.h  VkInstance.h  VkPipeline.h  VkRenderModule.h  VkRenderer.h  VkShader.h  VkSurface.h  VkSwapchain.h  VkTexture.h
Source/Resources/Shaders/: Fragment.glsl
Source/Shaders/: Default2D.frag  Default2D.vert  Default3D.frag  Default3D.vert  Fragment.glsl  README.md  Vertex.glsl
docs/: GettingStarted.md  index.md  main.py
docs/pages/: Object.md  Resource.md  Shaders.md  Text.md
package/: CMakeLists.txt
package/Source/: main.cpp
packager/Source/Private/: main.cpp
tests/Source/Private/: main.cpp
tests/Source/Public/: Framework.h
tools/: view_profiler.py
tools/aby_package/: CMakeLists.txt
tools/aby_package/Source/: main.cpp
tools/cmake/: CopyIfExist.cmake  Functions.cmake
tools/localize/: CMakeLists.txt
tools/localize/Source/: main.cpp
tools/localize/Source/Private/: main.cpp
tools/packager/: CMakeLists.txt  README.md
tools/packager/Source/Private/: main.cpp
tools/tests/: CMakeLists.txt
tools/tests/Source/: main.cpp
tools/tests/Source/Private/: Framework.cpp
tools/tests/Source/Public/: Framework.h
tools/tool/: CMakeLists.txt
tools/tool/Source/: main.cpp
tools/valgrind/: supressions.txt
tools/watchdog/: CMakeLists.txt
tools/watchdog/Source/: main.cpp
tools/watchdog/Source/Private/: main.cpp
